# alectrona

./: .gitignore  Cargo.toml  README.md  alectrona_web.d.ts  alectrona_web.js  alectrona_web_bg.d.ts  alectrona_web_bg.wasm  devices.toml  dom_manipulator.js  index.html  index.js  styles.css
alectrona/: Cargo.toml
alectrona/src/: devices.toml  lib.rs
alectrona/src/codec/: mod.rs  moto_kit_kat.rs  one_plus_2.rs  one_plus_3.rs
alectrona/src/data/: mod.rs  moto_kit_kat.rs  one_plus_2.rs  one_plus_3.rs
snippets/alectrona-web-d188a0075a21ad3d/static/: index2.js
src/: main.rs
