[package]
name = "alectrona-cli"
version = "0.1.0"
authors = ["pheki"]
edition = "2018"

[[bin]]
name = "alectrona"
path = "src/main.rs"

[dependencies]
alectrona = { path = "alectrona" }
clap = "2"
toml = "0.5"
directories = "1.0"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 3

[workspace]
