[package]
name = "alectrona"
version = "0.1.0"
authors = ["bilko"]
edition = "2018"

[features]
default = ["multithreading"]
multithreading = ["image/jpeg_rayon"]
serde_ = ["serde", "serde_derive"]

[dependencies]
serde = {version = "1", optional = true}
serde_derive = {version = "1", optional = true}

[dependencies.image]
version = "0.21"
default-features = false
features = ["gif_codec", "jpeg", "ico", "png_codec", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"]
